Added frame restart
八球和九球加入了开球违例后重开本局的选项

--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -33,6 +33,8 @@
                       disable="true"/>
             <MenuItem fx:id="pushOutMenu" text="%pushOut" disable="true"
                       onAction="#pushOutAction"/>
+            <MenuItem fx:id="reBreakMenu" text="%reBreak" disable="true"
+                      onAction="#reBreakAction"/>
         </Menu>
         <Menu text="%playMenu">
             <CheckMenuItem fx:id="aiAutoPlayMenuItem" text="%aiAutoPlay"/>
