--- a/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
@@ -27,6 +27,7 @@
     <HBox spacing="10.0" alignment="BOTTOM_RIGHT" VBox.vgrow="ALWAYS">
         <Button fx:id="yesButton" text="%yes" minWidth="50.0"/>
         <Button fx:id="noButton" text="%no" minWidth="50.0"/>
+        <Button fx:id="cancelButton" text="%cancel" minWidth="50.0" visible="false" managed="false"/>
     </HBox>
 
 </VBox>
